1.4/02/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app
spec:
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
      - name: front-app
        image: nginx
        ports:
        - containerPort: 80
