1.4/02/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-app-svc
spec:
  selector:
    app: back-app
  ports:
  - port: 80
    targetPort: 80
