1.4/02/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app-svc
spec:
  selector:
    app: front-app
  ports:
  - port: 80
    targetPort: 80
